:sparkles: [ADD] Get nodes and node by nodeNumber
